[gd_scene load_steps=8 format=3 uid="uid://dpbusafl685o6"]

[ext_resource type="Script" uid="uid://clcg8142rdons" path="res://panels/popups/UIInterfaceSelector/UIInterfaceSelector.gd" id="1_52xbj"]
[ext_resource type="PackedScene" uid="uid://dr0kfolsg46yu" path="res://panels/UIPanel/PanelMenuBar.tscn" id="2_k7der"]
[ext_resource type="Texture2D" uid="uid://dsdrilsl1p3g1" path="res://assets/icons/IPAddr.svg" id="3_dwg5m"]
[ext_resource type="Texture2D" uid="uid://ddo26yd8qpx5r" path="res://assets/icons/Refresh.svg" id="4_hkgya"]
[ext_resource type="StyleBox" uid="uid://csle20exwqtti" path="res://assets/styles/PanelMenuBar.tres" id="5_lcwq5"]
[ext_resource type="Texture2D" uid="uid://b3hmh5jlggqxa" path="res://assets/icons/cross.svg" id="6_2gbem"]
[ext_resource type="Texture2D" uid="uid://bi4ttx5uklwl7" path="res://assets/icons/Check.svg" id="7_4qotu"]

[node name="UIInterfaceSelector" type="PanelContainer" node_paths=PackedStringArray("interface_tree", "confirm_button", "edit_controls", "menu_bar")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_52xbj")
interface_tree = NodePath("VBoxContainer/InterfaceTree")
confirm_button = NodePath("VBoxContainer/PanelContainer/HBoxContainer/Confirm")
edit_controls = NodePath("VBoxContainer/PanelMenuBar/HBoxContainer/EditControls")
menu_bar = NodePath("VBoxContainer/PanelMenuBar")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PanelMenuBar" parent="VBoxContainer" instance=ExtResource("2_k7der")]
layout_mode = 2

[node name="ComponentButton" parent="VBoxContainer/PanelMenuBar/HBoxContainer" index="0"]
text = "InterfaceSelector"
icon = ExtResource("3_dwg5m")

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 10

[node name="Reload" type="Button" parent="VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer/PanelContainer"]
layout_mode = 2
icon = ExtResource("4_hkgya")

[node name="InterfaceTree" type="Tree" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 2
hide_folding = true
hide_root = true
select_mode = 1

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("5_lcwq5")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="Cancel" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"
icon = ExtResource("6_2gbem")

[node name="Confirm" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Confirm"
icon = ExtResource("7_4qotu")

[connection signal="pressed" from="VBoxContainer/PanelMenuBar/HBoxContainer/ScrollContainer/PanelContainer/Reload" to="." method="reload"]
[connection signal="item_activated" from="VBoxContainer/InterfaceTree" to="." method="_confirm_selected"]
[connection signal="item_selected" from="VBoxContainer/InterfaceTree" to="." method="_on_interface_tree_item_selected"]
[connection signal="nothing_selected" from="VBoxContainer/InterfaceTree" to="." method="_on_interface_tree_nothing_selected"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/Cancel" to="." method="cancel"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/Confirm" to="." method="_confirm_selected"]

[editable path="VBoxContainer/PanelMenuBar"]
